--- a/src/Components/Sidebar/style.css
+++ b/src/Components/Sidebar/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Akshar:wght@500&display=swap');
+
+
 .sidebar-container{
     background-color: #5031a2;
     height: 100vh;
@@ -19,8 +22,15 @@
 }
 
 .sidebar-user{
-    color: white;
-text-align: center;
+    font-family: 'Akshar', sans-serif;
+    color: whitesmoke;
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.sidebar-name{
+    margin-bottom: 20px;
 }
 
 .sidebar-list{
