--- a/src/Pages/Produtos/style.css
+++ b/src/Pages/Produtos/style.css
@@ -22,12 +22,22 @@
 .button{
     background-color: #5031a2;
     color: white;
+   
 }
+
+#excluir{
+    border-left: 1px solid white;
+} 
 .button:hover{
 cursor: pointer;
 background-color: #4722ad;
 }
 
+.produto-actions{
+    display: flex;
+    width: 111%;
+    
+}
 .produto-info{
     font-size: 20px;
     font-family: 'Akshar', sans-serif;
