Validações e notificações implementadas
Validações feitas em todos os formulários do projeto.
Sistema de notificações de sucesso, ao Adicionar editar e excluir dados.

--- a/src/Pages/Login/style.css
+++ b/src/Pages/Login/style.css
@@ -139,6 +139,10 @@ h2 {
     width: 80%;
 }
 
+.error-msg{
+    margin-top: 10px;
+    height: 20px;
+}
 
 @media screen and (max-width: 900px) {
     .box {
